# AcadAssist

./: .gitignore  .pre-commit-config.yaml  alembic.ini  logging.ini  pyproject.toml
app/: main.py  middleware.py
app/backend/: config.py  db.py  dependencies.py  logging_config.py
app/core/: config.py  db.py  dependencies.py
app/migrations/: env.py
app/migrations/versions/: 020d780f9e23_rename_field_total_cost_cost.py  0ce1f3ac98b2_init.py  1ebd7a5d61f3_test_migrations.py  6341b5d46d4a_def_field_mtm.py  6df44c88d675_initial_clean_migration.py  9ba39ac17485_initial_revision.py  b3aab7f6a003_initial_clean_migration.py  ce342f1f3c8f_initial_revision.py  e59c03328d39_initial_migration_universities_models.py  f78692c04243_rename_field_specialty_speciality.py  faeea02286e3_init_db.py
app/models/: enums.py  universitie.py  university.py
app/repositories/: university_repository.py
app/routers/university/: __init__.py  semester_router.py  speciality_router.py  subject_router.py  university_router.py  work_router.py
app/routes/: university_routes.py
app/routes/university/: semester_router.py  specialty_router.py  specialty_routes.py  university_router.py
app/schemas/: university.py
app/schemas/university/: __init__.py  semester.py  speciality.py  specialty.py  subject.py  work.py
app/services/: university_service.py
app/services/university/: __init__.py  semester_service.py  speciality_service.py  subject_service.py  university_service.py  work_service.py
