[tool.poetry]
name = "acadassist"
version = "0.1.0"
description = ""
authors = ["pecheritsa <pecheritsa.roman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
environs = "^14.2.0"
alembic = "^1.16.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = [
    "__pycache__",
    ".git/",
    "env/",
    "venv/",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"



[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "R",  # refactor
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "ARG001",  # Unused function argument
    "B008",    # do not perform function calls in argument defaults
    "B904",    # Allow raising exceptions without from e, for HTTPException
    "F841",    # Local variable `response` is assigned to but never used
    "RET504",  # Unnecessary assignment to `users` before `return` statement
    "UP015",   # [*] Unnecessary open mode parameters
    "UP031",   # Use format specifiers instead of percent formatRuff
]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
